manifest/objects/ALTF__Log__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AccountStrId__c</fullName>
        <label>Account ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>ALTF__Account_Plan__c</referenceTo>
        <relationshipLabel>Altify Logs</relationshipLabel>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Logs</relationshipLabel>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Altify Logs</relationshipLabel>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Opp_Owner__c</fullName>
        <formula>ALTF__User__c = ALTF__Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opp Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Log_Type__c</fullName>
        <label>Log Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__OpportunityStrId__c</fullName>
        <label>Opportunity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Altify Logs</relationshipLabel>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Page__c</fullName>
        <label>Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Criteria</fullName>
                </value>
                <value>
                    <fullName>Insight Map</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Actions</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Improve</fullName>
                </value>
                <value>
                    <fullName>Plan Overview</fullName>
                </value>
                <value>
                    <fullName>Plan Details</fullName>
                </value>
                <value>
                    <fullName>Segmentation</fullName>
                </value>
                <value>
                    <fullName>Opportunity Map</fullName>
                </value>
                <value>
                    <fullName>Value Map</fullName>
                </value>
                <value>
                    <fullName>Objectives</fullName>
                </value>
                <value>
                    <fullName>Scorecard</fullName>
                </value>
                <value>
                    <fullName>Completeness</fullName>
                </value>
                <value>
                    <fullName>Quicklink</fullName>
                </value>
                <value>
                    <fullName>Milestones</fullName>
                </value>
                <value>
                    <fullName>Smart Browser</fullName>
                </value>
                <value>
                    <fullName>Team View</fullName>
                </value>
                <value>
                    <fullName>DVLS Quicklink</fullName>
                </value>
                <value>
                    <fullName>Market View</fullName>
                </value>
                <value>
                    <fullName>Plan Settings</fullName>
                </value>
                <value>
                    <fullName>AM Test &amp; Improve</fullName>
                </value>
                <value>
                    <fullName>Altify Account</fullName>
                </value>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Call Plans</fullName>
                    <isActive>false</isActive>
                    <label>Call Plans</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Quicklink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>ALTF__Quicklink__c</referenceTo>
        <relationshipLabel>Altify Logs</relationshipLabel>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__SessionId__c</fullName>
        <description>Track the session id for the log</description>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__UserStrId__c</fullName>
        <label>User ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID_for_Reports__c</fullName>
        <formula>IF (ISNULL(ALTF__AccountStrId__c), ALTF__Account__c, ALTF__AccountStrId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID for Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_for_Reports__c</fullName>
        <formula>IF (ISNULL(ALTF__OpportunityStrId__c), ALTF__Opportunity__c, ALTF__OpportunityStrId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID for Reports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID_for_Reports__c</fullName>
        <formula>IF (ISNULL(ALTF__UserStrId__c), ALTF__User__c, ALTF__UserStrId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID for Reports</label>
        <type>Text</type>
    </fields>
    <label>Altify Log</label>
    <nameField>
        <label>AltifyLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>